--- a/web3ladies_t-matic/css/style.css
+++ b/web3ladies_t-matic/css/style.css
@@ -8,6 +8,7 @@
 }
 :root{
     --white:#ffffff;
+    --black:#000;
     --bg-black: #04010C;
     --txt-color: #F3ECFE;
     --purple-btn-bg: #5E1BA5;
@@ -27,6 +28,10 @@ html,body{
     color: var(--txt-color);
     font-family: sans-serif;
 }
+main,footer{
+    width: 95%;
+    margin-inline: auto;
+}
 img,video{
     display: block;
     max-width: 100%;
@@ -37,4 +42,122 @@ a{
 ul{
     list-style-type: none;
 }
+/* icon */
+.logo-img{
+    height: 40px;
+}
+.menu-bar{
+    font-size: 30px;
+}
+.close-bar{
+    color: black;
+    font-size: 30px;
+    display: grid;
+    place-content: center;
+    margin-top: 2rem;
+}
 /* general styling */
+
+/* Barakat  starts here*/
+
+/* header section*/
+nav{
+    display: flex;
+    flex-direction: column;
+}
+.logo,.logo2{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    background-color: var(--bg-black);
+}
+.logo2 .menu-bar{
+    display: none;
+}
+.collapsible{
+    background-color: var(--txt-color);
+    height: 100vh;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transition: 200ms ease;   
+    transform: translateX(100%);
+}
+.hide{
+    transform: translateX(0);
+}
+.nav-link{
+    display: block;
+    text-align: center;
+    color: var(--black);
+    border-bottom: 1px solid var(--black);
+    padding: 1.5rem 0;
+    font-size: 1.5rem;
+}
+.nav-link:hover{
+    background-color: var(--bg-black);
+    color: var(--white);
+} 
+.connect-btn{
+    display: block;
+    background-color: var(--purple-btn-bg);
+    color: var(--white);
+    border: none;
+    text-align: center;
+    font-size: 1rem;
+    padding: 1.5rem 0;
+}
+/* header section*/
+@media only screen and (min-width:768px) {
+   .close-bar,.menu-bar{
+    display: none;
+   }
+   .logo2{
+    display: none;
+   }
+   nav{
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+   }
+   .collapsible{
+    background-color: transparent;
+    position: relative;
+    height: 5vh;
+    top: 0.7rem;
+    transform: translateY(0);
+    transition: 200ms ease; 
+   }
+   .collapse{
+    display: flex;
+    align-items: center;
+   }
+   .nav-menu{
+    display: flex;
+   }
+   .nav-link{
+    margin: 0 0.5rem;
+    color: var(--txt-color);
+    border-bottom: none;
+    padding: 0;
+    font-size: 1rem;
+   }
+   .connect-btn{
+    padding: .3rem 1rem;
+    margin: 0 1rem 0 2rem;
+   }
+   
+}
+@media only screen and (max-width:1071px){
+    
+}
+@media only screen and (min-width:1071px){
+    
+}
+/* Barakat end here */
+/* Glory starts here */
+/* Glory end here */
+/* Hafsoh starts here */
+/* Hafsoh end here */
