--- a/web3ladies_t-matic/css/style.css
+++ b/web3ladies_t-matic/css/style.css
@@ -42,10 +42,11 @@ ul{
 }
 /* icon */
 .logo-img{
-    height: 40px;
+    height: 30px;
 }
+
 .menu-bar{
-    font-size: 30px;
+    font-size: 25px;
 }
 .close-bar{
     color: black;
@@ -76,7 +77,8 @@ nav{
 .collapsible{
     background-color: var(--txt-color);
     height: 100vh;
-    position: absolute;
+    /* position: absolute; */
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
@@ -108,6 +110,39 @@ nav{
     padding: 1.5rem 0;
 }
 /* header section*/
+
+/* hero */
+.hero-content{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2rem;
+}
+.hero-txt{
+    margin-top: 1.5rem;
+}
+.hero-txt h1{
+    font-size: 3rem;
+    word-spacing: -8px;
+    line-height: 55px;
+}
+.hero-txt p{
+    margin: 1rem 0 1.3rem 0;
+    padding-right:2rem;
+    line-height: 25px;
+    font-size: 1rem;
+}
+.read-more{
+    font-weight: lighter;
+    color: var(--white);
+    padding: 0.6rem 1.2rem;
+    font-size: 0.7rem;
+    background: linear-gradient(black, black) padding-box,
+    linear-gradient(to right, darkblue, darkorchid) border-box;
+    border: 1px solid transparent;
+
+}
+/* hero */
+
 @media only screen and (min-width:768px) {
 /* header section*/
 
@@ -125,6 +160,7 @@ nav{
    .collapsible{
     background-color: transparent;
     position: relative;
+    /* position: sticky; */
     height: 5vh;
     top: 0.7rem;
     transform: translateY(0);
@@ -149,6 +185,24 @@ nav{
     margin: 0 1rem 0 2rem;
    }
 /* header section*/
+   /* hero */
+   .hero-content{
+    flex-direction: row;
+    margin-bottom: 1rem;
+   }
+   .hero-txt{
+    padding-top: 2.5rem;
+   }
+   .hero-txt h1{
+    font-weight:700;
+    font-size: 3rem;
+    line-height: 50px;
+   }
+   .hero-txt p{
+    padding-right: 0;
+   }
+   
+   /* hero */
    
 }
 @media only screen and (max-width:1071px){
