--- a/web3ladies_t-matic/css/style.css
+++ b/web3ladies_t-matic/css/style.css
@@ -25,6 +25,8 @@ html,body{
     background: var(--bg-black);
     color: var(--txt-color);
     font-family: sans-serif;
+    max-width: 1400px;
+    margin-inline:auto;
 }
 main,footer{
     width: 95%;
@@ -84,6 +86,7 @@ nav{
     right: 0;
     transition: 200ms ease;   
     transform: translateX(100%);
+    z-index: 1;
 }
 .hide{
     transform: translateX(0);
@@ -112,24 +115,52 @@ nav{
 /* header section*/
 
 /* hero */
+.overlay-1{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    right: 0;
+    border: none;
+    border-radius: 50%;
+    filter: blur(75px);
+    background-color:#924eda7c;
+}
+.overlay-2{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    left: 0;
+    bottom: 0;
+    border: none;
+    border-radius: 50%;
+    filter: blur(75px);
+    background-color:#924eda7c;
+
+}
 .hero-content{
     display: flex;
     flex-direction: column;
     margin-bottom: 2rem;
 }
+.hero-img{
+    position: relative;
+}
 .hero-txt{
     margin-top: 1.5rem;
+    flex-basis: 40%;
 }
 .hero-txt h1{
     font-size: 3rem;
     word-spacing: -8px;
     line-height: 55px;
+    color: var(--txt-color);
 }
 .hero-txt p{
+    color: var(--txt-color);
     margin: 1rem 0 1.3rem 0;
     padding-right:2rem;
     line-height: 25px;
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 .read-more{
     font-weight: lighter;
@@ -139,13 +170,120 @@ nav{
     background: linear-gradient(black, black) padding-box,
     linear-gradient(to right, darkblue, darkorchid) border-box;
     border: 1px solid transparent;
+}
+.step-info{
+    position: relative;
 
 }
+.step-info h2{
+    font-size: 2.5rem;
+    word-spacing: -5;
+    color: var(--white);
+    margin-bottom: 1.3rem;
+   }
+   .steps{
+    margin: 1rem 0;
+    display: flex;
+    justify-content: space-between;
+   }
+   .step-message{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+   }
+   .step-message p{
+    font-size: 0.8rem;
+   }
+   .h-bg{
+    background-color:#924eda87;
+    padding: 0.2rem;
+    border-radius: 50%;
+    margin-bottom: 1.5rem;
+   }
+   .hero-step{
+    margin: 1.5rem 0;
+   }
 /* hero */
+/* footer */
+footer{
+    margin-top: 4rem;
+    padding: 0 2rem;
+}
+.social{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    margin: 1.5rem 0;
+}
+.social h3{
+    font-size: 2rem;
+}
+.social-icon{
+    display: flex;
+}
+.copyright{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    font-size: 0.7rem;
+}
+.copyright span{
+    margin: 0.5rem 0;
+    text-align: center;
+}
+.footer-nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.footer-nav li{
+margin: 0.5rem;
+}
 
+/* footer */
+@media only screen and (min-width:600px) {
+    .hero-content{
+        flex-direction: row;
+        margin-bottom: 1rem;
+       }
+       .hero-txt{
+        padding-top: 2.5rem;
+        flex-basis: 40%;
+       }
+       .hero-img{
+        flex-basis: 60%;
+       }
+       .hero-txt h1{
+        font-weight:700;
+        font-size: 2rem;
+        line-height: 40px;
+       }
+       .hero-txt p{
+        font-size: 0.7rem;
+        width: 250px;
+       }
+       .hero-step{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem;
+       }
+       .steps{
+        width: 100%;
+        flex-basis: 60%;
+       }
+       .step-info{
+        flex-basis: 40%;
+       }
+       .step-info h2{
+        font-size: 2rem;
+       }
+
+}
 @media only screen and (min-width:768px) {
 /* header section*/
-
    .close-bar,.menu-bar{
     display: none;
    }
@@ -174,42 +312,83 @@ nav{
     display: flex;
    }
    .nav-link{
-    margin: 0 0.5rem;
+    margin: 0 0.7rem;
     color: var(--txt-color);
     border-bottom: none;
     padding: 0;
     font-size: 1rem;
    }
    .connect-btn{
-    padding: .3rem 1rem;
+    padding: .5rem 1.5rem;
     margin: 0 1rem 0 2rem;
    }
 /* header section*/
    /* hero */
-   .hero-content{
-    flex-direction: row;
-    margin-bottom: 1rem;
-   }
-   .hero-txt{
-    padding-top: 2.5rem;
-   }
    .hero-txt h1{
-    font-weight:700;
-    font-size: 3rem;
-    line-height: 50px;
+    font-size: 3.5rem;
+    line-height: 70px;
    }
    .hero-txt p{
-    padding-right: 0;
+    font-size: 1rem;
+    width: 350px;
    }
-   
+   .hero-step h2{
+    font-size: 2.5rem;
+   }
    /* hero */
-   
+   /* footer */
+   footer{
+    position: relative;
+    bottom: 0;
+   }
+   .social{
+    margin: 1.5rem;
+   }
+   .social h3{
+    font-size: 2rem;
+    margin: 2rem 0 0.5rem 0;
+   }
+   .copyright{
+    flex-direction: row;
+   }
+
+   .footer-nav li{
+    margin: 0 0.4rem;
+   }
+   /* footer */
 }
-@media only screen and (max-width:1071px){
-    
-}
+
 @media only screen and (min-width:1071px){
-    
+    .overlay-1{
+        width: 350px;
+        height: 350px;
+    }
+    .overlay-2{
+        width: 300px;
+        height: 300px;
+    }
+header{
+    padding: 0 1.5rem;
+}
+    .hero-txt h1{
+        margin-top: 2rem;
+        font-size: 4rem;
+        line-height: 75px;
+        font-weight: 700;
+    }
+    .hero-txt p{
+        font-size: 1.2rem;
+        width: 350px;
+    }
+    .step-info h2{
+        font-size: 3.5rem;
+    }
+    .step-info{
+        flex-basis: 50;
+    }
+ .steps{
+    flex-basis: 50%;
+ }   
 }
 /* Barakat end here */
 
@@ -226,13 +405,5 @@ nav{
 /* Hafsoh end here */
 
 /* Glory starts here */
-@media only screen and (max-width:768px){
-    
-}
-@media only screen and (max-width:1071px){
-    
-}
-@media only screen and (min-width:1071px){
-    
-}
+
 /* Glory end here */
