--- a/web3ladies_t-matic/css/style.css
+++ b/web3ladies_t-matic/css/style.css
@@ -171,17 +171,31 @@ li {
 /* hero */
 
 /* HAFSAH'S PART */
-.swiper {
-  width: 400px;
-  height: 400px;
-  text-align: center;
-  /* align-self: center; */
+.swiper-div {
+    overscroll-behavior-x: none;
+}
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
 }
 .swiper-slide {
   border: 1px solid;
-  max-width: 50%;
+  max-width: 25%;
   padding: 10px;
   background-image: var(--red-to-blue-gradient);
+  margin-left: 10px;
+}
+@media only screen and (max-width: 600px) {
+    .swiper-slide{
+        width: 100% !important;
+        min-width: 95%;
+        border: 4px solid;
+    }
+    .sold-out-btn{
+        font-size: 5px;
+        line-height: 5px;
+    }
+
 }
 
 .details-container {
