--- a/web3ladies_t-matic/css/style.css
+++ b/web3ladies_t-matic/css/style.css
@@ -33,6 +33,7 @@ body {
   font-family: sans-serif;
   /* max-width: 1400px; */
   margin-inline: auto;
+  overflow-y: scroll;
 }
 main,
 footer {
@@ -185,18 +186,7 @@ li {
   background-image: var(--red-to-blue-gradient);
   margin-left: 10px;
 }
-@media only screen and (max-width: 600px) {
-    .swiper-slide{
-        width: 100% !important;
-        min-width: 95%;
-        border: 4px solid;
-    }
-    .sold-out-btn{
-        font-size: 5px;
-        line-height: 5px;
-    }
 
-}
 
 .details-container {
   display: flex;
@@ -212,11 +202,15 @@ li {
   line-height: 18px;
   color: #000;
   margin-bottom: 10px;
+  padding: 3px;
+  padding-top: 10px;
+
+  
 }
 .btn-div {
   justify-content: center;
   align-items: center;
-  padding: 8px;
+  /* padding: 8px; */
   gap: 8px;
   width: 77px;
   height: 30px;
@@ -266,16 +260,30 @@ li {
 }
 
 @media only screen and (max-width: 600px) {
+    /* FOR SMALL SCREEN */
     .swiper-slide{
-        width: 20%;
+        width: 100% !important;
+        min-width: 70%;
+        border: 4px solid;
+    }
+    .sold-out-btn{
+        font-size: 8px;
+        line-height: 5px;
+    }
+    .btn-div{
+        padding: 2px;
+        width: 50px;
     }
     img{
         min-width: 100%;
     }
+}
+@media only screen and (min-width: 600px) {
+    /* FOR LARGE SCREEN */
 
 }
-
 /* END OF HAFSAH'S PART */
+
 
 /* footer */
 
