--- a/web3ladies_t-matic/css/claim-reward.css
+++ b/web3ladies_t-matic/css/claim-reward.css
@@ -103,4 +103,119 @@ li {
   width: 50%;
   margin:50px auto;
 }
+
+/* Connect container styling */
+.connect-container{
+  background-color: #030718;
+  color: white;
+  display: block;
+  width: 170px;
+  /* height: 250px; */
+  /* margin: auto; */
+  float: right;
+  margin-bottom: 20px;
+  padding: px;
+  margin-top:10px;
+}
+.connect-header {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 150%;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.connect-tag {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 8px;
+  text-align: center;
+}
+.new-account {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 150%;
+  color: #76e1b5;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+.fa {
+  margin-top: 15px;
+}
+.gradient {
+  background-image: linear-gradient(
+    242.35deg,
+    rgba(94, 27, 165, 0.53) 32.81%,
+    rgba(21, 39, 84, 0.25) 39.79%,
+    rgba(249, 189, 37, 0.6) 46.53%,
+    rgba(6, 110, 67, 0.37) 54.77%
+  );
+  width: 30px;
+  height: 30px;
+  border-radius: 40px;
+  margin-top: 12px;
+}
+
+.middle-div {
+  box-sizing: border-box;
+  border: 1px solid rgba(23, 80, 225, 0.2);
+  border-style: dotted;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.matic-ptag {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  color: #76e1b5;
+  font-size: 8px;
+  margin-top: 15px;
+}
+.modal-footer {
+  margin-top: 50px;
+  text-align: center;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 7px;
+  line-height: 150%;
+  border-bottom:  1px solid rgba(23, 80, 225, 0.2);
+  width: 100% !important;
+  padding-bottom: 10px;
+
+}
+
+.foot {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.cancel, .next {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 150%;
+  padding: 2px;
+}
+.cancel{
+  background-color: #030718;
+  color: white;
+
+
+}
+.next{
+  background-color: #5E1BA5;
+  color: white;
+}
+
+#wallet-name{
+  color: #76E1B5;                                                
+}
+
 /* HAFSAH */
