--- a/web3ladies_t-matic/css/reward.css
+++ b/web3ladies_t-matic/css/reward.css
@@ -103,6 +103,6 @@ text-align: center;
 
   
 }
-=======
+
 /* glory */
->>>>>>> c9a5b57164710de616dd09c0bc3e0d9a6efe37a5
+ /* c9a5b57164710de616dd09c0bc3e0d9a6efe37a5 */
