--- a/web3ladies_t-matic/css/claim-reward.css
+++ b/web3ladies_t-matic/css/claim-reward.css
@@ -114,7 +114,7 @@ li {
   /* margin: auto; */
   float: right;
   margin-bottom: 20px;
-  padding: px;
+  /* padding: px; */
   margin-top:10px;
 }
 .connect-header {
