--- a/web3ladies_t-matic/css/claim-reward.css
+++ b/web3ladies_t-matic/css/claim-reward.css
@@ -114,7 +114,8 @@ li {
   /* margin: auto; */
   float: right;
   margin-bottom: 20px;
-  padding: px;
+  border-radius: 1px;
+  border: 1px solid rgb(8, 8, 98);
   margin-top:10px;
 }
 .connect-header {
