--- a/web3ladies_t-matic/css/reward.css
+++ b/web3ladies_t-matic/css/reward.css
@@ -69,14 +69,74 @@
     place-content: center;
     margin-top: 2rem;
   }
-<<<<<<< HEAD
+
 /* Glory's part */
-@media only screen and (max-width:768px){
+
+@media only screen and (min-width:768px){
   .nft{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    line-height: 1.6rem;
   }
+  h3 {
+    color:#76E1B5;
+    ;
+    padding: 0.6rem 0 00;
+  }
+  h4 {
+    padding: 0.6rem 0;
+  }
+  .nft-note {
+    padding-top: 3rem;
+    text-align: center;
+  }
+  .nft-heading{
+    text-align: center;
+    }
+      
+  .nft-heading p{
+        padding-bottom: 3rem;
+    }
+  h1 {
+      padding-bottom: 1rem;
+    }
 }
+
+@media only screen and (max-width:768px){
+  
+  .nft{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    line-height: 1.6rem;
+  }
+  h3 {
+    color:#76E1B5;
+    ;
+    padding: 0.6rem 0 00;
+  }
+  h4 {
+    padding: 0.6rem 0;
+  }
+  .nft-note {
+    padding-top: 3rem;
+    text-align: center;
+  }
+  .nft-heading{
+    text-align: center;
+      }
+  .nft-heading p{
+        padding-bottom: 3rem;
+      }
+  h1 {
+      padding-bottom: 1rem;
+    }
+}
+
+
 @media only screen and (min-width:1017px){
   .nft-heading{
 text-align: center;
@@ -89,6 +149,7 @@ text-align: center;
 }
   .nft{
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-around;
     line-height: 1.6rem;
@@ -96,14 +157,15 @@ text-align: center;
   h3 {
     color:#76E1B5;
     ;
-    padding: 0.6rem 0 00;
+    padding: 0.6rem 0 0 0;
   }
   h4 {
     padding: 0.6rem 0;
   }
 
-  
+
+
+
 }
-=======
+
 /* glory */
->>>>>>> c9a5b57164710de616dd09c0bc3e0d9a6efe37a5
