--- a/web3ladies_t-matic/css/style.css
+++ b/web3ladies_t-matic/css/style.css
@@ -522,7 +522,17 @@ li {
     justify-content: center;
    }
 
-   
+   .fa-angle-left {
+    left: 3rem;
+    position: absolute;
+    top: 123rem;
+   }
+   .fa-angle-right {
+    position: absolute;
+    right: 2rem;
+    top: 123rem;
+    
+   }
    .team-images h6 {
     text-align: center;
     padding-top: 0.5rem;
@@ -572,8 +582,23 @@ li {
    .team-images{
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
-    width: 50%;
+    margin: 0 auto;
+   }
+   .fa-angle-left {
+    left: 2rem;
+    position: absolute;
+    top: 146rem;
+   }
+   .fa-angle-right {
+    position: absolute;
+    right: 2rem;
+    top: 146rem;
+    
+   }
+   .team {
+    flex-basis: 30%;
    }
    .team-images h6 {
     text-align: center;
@@ -619,8 +644,20 @@ li {
   text-align: center;
   padding-top: 0.5rem;
  }
-}
+ .fa-angle-left {
+  position: absolute;
+  left: 13rem;
+  top: 156rem;
+  
+ }
+ .fa-angle-right {
+  position: absolute;
+  right: 43rem;
+  top: 156rem;
+  
+ }
 
+}
 
 
 /* Glory end here */
