--- a/web3ladies_t-matic/css/admin.css
+++ b/web3ladies_t-matic/css/admin.css
@@ -179,6 +179,12 @@ tbody tr:hover{
     height: 40px;
     margin: 0 0.3rem;
   }
+  .lucky-number2 li{
+    font-size: 1.2rem;
+    width: 45px;
+    height: 40px;
+    margin: 0 0.3rem;
+  }
   /* footer{
    position: absolute;
    bottom: 0; 
@@ -197,6 +203,29 @@ tbody tr:hover{
     width: 60px;
     height: 60px;
     font-size: 1.4rem;
+  }
+  .lucky-number2 li{
+    width: 60px;
+    height: 60px;
+    font-size: 1.4rem;
+  }
+  .generate-btn{
+    margin-right: 1.5rem;
+    font-weight: lighter;
+    color: var(--white);
+    padding: 0.2rem 1.2rem;
+    font-size: 1rem;
+    
+  }
+  .loading{
+    height: 30px;
+    width: 500px;
+    background-color:#D9D9D9 ;
+  }
+  .percent{
+    height: 30px;
+    width: 60%;
+    background-color:#76E1B5
   }
   .info{
     width: 800px;
