--- a/web3ladies_t-matic/css/style.css
+++ b/web3ladies_t-matic/css/style.css
@@ -255,6 +255,7 @@ li {
   text-align: right;
   border-top: 1px solid #5e1ba5;
   margin-top: 10px;
+  padding-top: 1rem;
   width: 100% !important;
 }
 
