--- a/web3ladies_t-matic/css/style.css
+++ b/web3ladies_t-matic/css/style.css
@@ -192,10 +192,12 @@ li {
   background: transparent; /* make scrollbar transparent */
 }
 .swiper-slide {
-  border: 1px solid;
+  /* border: none; */
   max-width: 25%;
-  padding: 10px;
+  padding: 12px;
   margin-left: 10px;
+  border: 0.2px solid #4e4a4ab5;
+border-bottom: 0;
 }
 
 .details-container {
@@ -253,10 +255,11 @@ li {
 }
 .more-details-div {
   text-align: right;
-  border-top: 1px solid #5e1ba5;
+  /* border-top: 1px solid #5e1ba5; */
   margin-top: 10px;
-  padding-top: 1rem;
+  padding: 1rem;
   width: 100% !important;
+  border: 0.2px solid #4e4a4a;
 }
 
 .more-details {
