--- a/web3ladies_t-matic/css/admin.css
+++ b/web3ladies_t-matic/css/admin.css
@@ -70,6 +70,15 @@
     margin-top: 2rem;
   }
 /* result info */
+.draw{
+  width: 100%;
+  background-color:var(--bg-black);
+  color: var(--white);
+  padding: 0.5rem 0;
+  margin-bottom: 1.5rem;
+  border: 0.2px solid #ffffff4c;
+  outline: none;
+}
 .result-info{
   margin-top: 2rem;
 }
