--- a/web3ladies_t-matic/css/header.css
+++ b/web3ladies_t-matic/css/header.css
@@ -44,7 +44,10 @@ nav {
 }
 .connect-btn {
   display: block;
-  background-color: var(--purple-btn-bg);
+  /* background-color: var(--purple-btn-bg); */
+  background: linear-gradient(black, black) padding-box,
+  linear-gradient(to right, darkblue, darkorchid) border-box;
+  border: 1px solid transparent;
   color: var(--white);
   border: none;
   text-align: center;
@@ -52,8 +55,8 @@ nav {
   padding: 1.5rem 0;
 }
 .connect-btn:hover {
-  background-color: var(--bg-black);
-  color: var(--white);
+  background: #5e1ba5;
+  color: white;
 }
 /* connect wallet */
 .connect-wallet {
@@ -151,24 +154,33 @@ padding: 0 2rem;
     }
     .nav-menu {
       display: flex;
-      height: 30px;
+      align-items: center;
+      height: 35px;
     }
     .nav-link {
       margin: 0 0.7rem;
       color: var(--txt-color);
       border-bottom: none;
       padding: 0;
-      font-size: 1rem;
+      font-size: 0.9rem;
     }
     .connect-btn {
       padding: 0.5rem 1.5rem;
       margin: 0 1rem 0 2rem;
+      font-weight: lighter;
+      padding: 0.6rem 1.2rem;
+      font-size: 0.9rem;
+      border: 2px solid transparent;
+    }
+    .connect-btn:hover{
+      background: #5e1ba5 ;
+      border: transparent;  
     }
     .connect-wallet {
       bottom: 0;
       top: 2rem;
       z-index: 1;
-      width: initial;
+      width: 190px;
     }
     /* header section*/
     
