--- a/web3ladies_t-matic/css/reward.css
+++ b/web3ladies_t-matic/css/reward.css
@@ -27,8 +27,7 @@
     scroll-behavior: smooth;
     background: var(--bg-black);
     color: var(--txt-color);
-    font-family: sans-serif;
-    /* max-width: 1400px; */
+    font-family: 'Clash Display', sans-serif;
     margin-inline: auto;
   }
   main,
@@ -69,10 +68,7 @@
     place-content: center;
     margin-top: 2rem;
   }
-<<<<<<< HEAD
 
-=======
->>>>>>> 629f1ae84574bb2bbaf6d4fa0394f855b9c5820b
 /* Glory's part */
 
 @media only screen and (min-width:768px){
@@ -171,9 +167,6 @@ text-align: center;
 
 }
 
-<<<<<<< HEAD
 /* glory */
-=======
 /* glory */
  /* c9a5b57164710de616dd09c0bc3e0d9a6efe37a5 */
->>>>>>> 629f1ae84574bb2bbaf6d4fa0394f855b9c5820b
